# dotnet2021-aot-compilation

./: .gitignore  Dockerfile-Ubuntu-AOT  dotnet-2021.sln
interop/csharp-to-go/golib/: libgolib.h  main.go
interop/csharp-to-go/invoker/: Program.cs
interop/csharp-to-rust/dotnet-consumer/: Program.cs  dotnet-consumer.csproj  dotnet-consumer.sln  nuget.config
interop/csharp-to-rust/dotnet-consumer/native/: dotnet-consumer.deps.json  dotnet-consumer.runtimeconfig.json
interop/csharp-to-rust/rust-lib/: Cargo.toml
interop/csharp-to-rust/rust-lib/src/: lib.rs
interop/go-to-csharp/: go-to-csharp  go.mod  main.go
interop/go-to-csharp/lib/: System.Private.DisabledReflection.xml  System.Private.Interop.xml  System.Private.Reflection.Core.xml  System.Private.Reflection.Execution.xml  System.Private.Reflection.Metadata.xml  System.Private.StackTraceMetadata.xml  System.Private.TypeLoader.xml
interop/go-to-rust/: go-to-rust  go.mod  main.go
interop/go-to-rust/include/: librust_lib.h
interop/python-to-go/: interop.py
interop/rust-to-csharp/dotnet-lib/: Lib.cs  build  dotnet-lib.csproj
interop/rust-to-csharp/dotnet-lib/native/: dotnet-lib.deps.json
interop/rust-to-csharp/rust-consumer/: Cargo.toml  build.rs
interop/rust-to-csharp/rust-consumer/src/: main.rs
webapi/: Program.cs  nuget.config  webapi.csproj
webapi/Properties/: launchSettings.json
