[package]
name = "rust-lib"
version = "0.1.0"
authors = ["clanderas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde =  ""
serde_derive = ""

[lib]
name ="rust_lib"
crate_type = ["dylib"]
